# api.bhumimines

./: .htaccess  .replit  act.sh  db.sqlite3  passenger_wsgi.py  pyproject.toml  req.txt  req2.txt  requirements.txt  restart_server.sh
.github/workflows/: main.yml
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_rename_users_user.py  0003_user_username.py  0004_auto_20220508_1424.py
accounts/templates/accounts/: login.html
cashbook/: admin.py  models.py  urls.py  views.py
cashbook/migrations/: 0001_initial.py  0002_alter_cashbook_email_alter_cashbook_mobile_no_and_more.py  0003_remove_cashbook_email_remove_cashbook_mobile_no_and_more.py  0004_alter_cashbook_date.py
cashbook/templates/cashbook/: add.html  base.html
project/: login.py  settings.py  urls.py  views.py
project/templates/project/: base.html  empty.html
