[tool.poetry]
name = "repl_python3_apibhumimines"
version = "0.1.0"
description = ""
authors = ["malwaremanu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
